force-app/main/default/objects/Assignment_Strategy__c/fields/Fallback_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Owner_Id__c</fullName>
    <label>Fallback Owner Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>