force-app/main/default/objects/Assignment_Strategy__c/fields/Object_Target__c.field-meta.xml
<CustomField>
    <fullName>Object_Target__c</fullName>
    <label>Object Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>