force-app/main/default/objects/Assignment_Strategy__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maximize Revenue</fullName>
            </value>
            <value>
                <fullName>Minimize SLA</fullName>
            </value>
            <value>
                <fullName>Balance Workload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>