force-app/main/default/objects/Assignment_Strategy__c/fields/Override_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Override_Queue_Name__c</fullName>
    <label>Override Queue Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>