force-app/main/default/objects/Assignment_Strategy__c/fields/Weight_Performance__c.field-meta.xml
<CustomField>
    <fullName>Weight_Performance__c</fullName>
    <label>Performance Weight</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>