force-app/main/default/objects/Assignment_Strategy__c/fields/Weight_Workload__c.field-meta.xml
<CustomField>
    <fullName>Weight_Workload__c</fullName>
    <label>Workload Weight</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>